2008-12-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* tools/pdbgen/pdb/convert.pdb: fixed an error in the documentation
	of the gimp-image-convert-rgb procedure.

	* app/pdb/convert-cmds.c
	* libgimp/gimpconvert_pdb.c: regenerated.

2008-12-03  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_apply): when compiling
	against GEGL from trunk, use "gegl:translate" instead of "shift".

2008-11-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 562459 – PF_PALETTE: 'TypeError' when used in a plugin that is
	registered in <Image>

	* plug-ins/pygimp/gimpui.defs (gimp_palette_select_button_new):
	the 'title' parameter is optional.

2008-11-27  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	Bug 562427 – Compilation with --as-needed

	* app/Makefile.am (gimp_console_2_7_LDADD): add $(GLIB_LIBS) so
	libgthread gets pulled in explicitely.

2008-11-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 562386 – PF_SLIDER and PF_SPINNER 'Step' values do not change
	consistently...

	* plug-ins/pygimp/gimpfu.py (SliderEntry): set the precision on
	the slider just as we do it for the spin-button.

2008-11-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/pygimp/gimpfu.py (SpinnerEntry): let SpinnerEntry
	return a float instead of trying to convert the value to an int.

2008-11-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 562386 – PF_SLIDER and PF_SPINNER 'Step' values do not change
	consistently...

	* plug-ins/pygimp/gimpfu.py (SpinnerEntry): initialize the
	spin-button the way that gtk_spin_button_new_with_range() is
	implemented.

2008-11-26  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	Bug 562366 – Default image dimensions are not correctly
	transferred in the file/new dialog box

	* app/dialogs/preferences-dialog.c
	(prefs_template_select_callback): We need to copy the template in
	the same way as in the New Image dialog.
