@@ -538,6 +538,13 @@ gimp_display_shell_size_changed_detailed_handler (GimpImage        *image,
                                             shell->offset_y + scaled_previous_origin_y);
 
       gimp_display_shell_scroll_center_image (shell, horizontally, vertically);
+
+      /* The above calls might not lead to a call to
+       * gimp_display_shell_scroll_clamp_and_update() in all cases we
+       * need it to be called, so simply call it explicitly here at
+       * the end
+       */
+      gimp_display_shell_scroll_clamp_and_update (shell);
     }
 }
 
