@@ -1,3 +1,14 @@
+2008-12-04  Martin Nordholts  <martinn@svn.gnome.org>
+
+	Merged from trunk:
+
+	Bug 563179 – Scrollbars not resized when we extend the canvas size
+
+	* app/display/gimpdisplayshell-handlers.c
+	(gimp_display_shell_size_changed_detailed_handler): Add explicit
+	call to gimp_display_shell_scroll_clamp_and_update() at the end to
+	make sure it is called.
+
 2008-12-04  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
